fix wrapping of maps

--- a/client/src/styles/Post.scss
+++ b/client/src/styles/Post.scss
@@ -1,30 +1,30 @@
 @import "globals";
 
 .post {
+  display: flex;
+  flex-flow: column nowrap;
   margin: 0 15px 30px 15px;
   height: 100%;
 }
 
 .post__fields {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-auto-rows: auto;
+  grid-gap: 16px;
+  align-items: center;
+  width: 100%;
   margin: 20px 0;
 }
 
-.post__fields td:first-child {
-  padding-right: 15px;
-  color: rgba($secondary-color, 0.7);
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.post__fields td > div {
+.post__field-label {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  & > * {
+  color: rgba($secondary-color, 0.7);
+  font-weight: 600;
+  text-transform: uppercase;
+  & svg {
     margin-right: 4px;
   }
-}
-
-.post__fields tr {
-  height: 40px;
 }
